--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "ethers": "^6.13.4",
     "graphql": "^16.10.0",
     "mongoose": "^8.9.2",
     "passport": "^0.7.0",
@@ -45,6 +46,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
