--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "ethers": "^6.13.4",
     "graphql": "^16.10.0",
     "mongoose": "^8.9.2",
+    "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1"
@@ -53,6 +55,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.3.1",
+    "@types/qrcode": "^1.5.5",
     "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
