--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/schedule": "^4.1.2",
     "@nestjs/websockets": "^10.4.15",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.7",
     "ethers": "^6.13.4",
     "graphql": "^16.10.0",
@@ -57,7 +59,7 @@
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.17.12",
     "@types/qrcode": "^1.5.5",
     "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.0",
