--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/apollo": "^12.2.2",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
@@ -38,8 +39,10 @@
     "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.7",
     "ethers": "^6.13.5",
+    "fontkit": "^2.0.4",
     "graphql": "^16.10.0",
     "mongoose": "^8.9.2",
+    "nodemailer": "^6.9.16",
     "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -60,6 +63,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.17.12",
+    "@types/pdfkit": "^0.13.8",
     "@types/qrcode": "^1.5.5",
     "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.0",
